--- a/MvcMovie/Views/HelloWorld/Index.cshtml
+++ b/MvcMovie/Views/HelloWorld/Index.cshtml
@@ -1,7 +1,7 @@
 @{
-    ViewData["Title"] = ["Index"];
+    ViewData["Title"] = "Index";
 }
 
 <h2>Index</h2>
 
-<p>Hello from out View Template</p>
+<p>Hello from our View Template</p>
