--- a/MvcMovie/Views/Home/Index.cshtml
+++ b/MvcMovie/Views/Home/Index.cshtml
@@ -1,8 +1,13 @@
-﻿@{
+@{
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<form asp-action="Index">
+    <label>Nhập họ tên:</label>
+    <input type="text" name="FullName">
+    <label>Nhập địa chỉ:</label>
+    <input type="text" name="Address"
+    <input type="submit" value="Gửi dữ liệu">
+</form>
+
+<h1>@ViewBag.Message</h1>
