--- a/MvcMovie/Views/Person/Index.cshtml
+++ b/MvcMovie/Views/Person/Index.cshtml
@@ -1,3 +1,10 @@
-<formcx asp-action="Index">
+<form asp-action="Index">
     <label>Nhập PersonID</label>
-    <input type="text" name="Per"
+    <input type="text" name="PersonId"
+    <label>Nhập họ tên:</label>
+    <input type="text" name="FullName"
+    <label>Nhập địa chỉ</label>
+    <input type="text" name="Address"
+    <input type="submit" value="Gửi địa chỉ"
+
+</form>  
