--- a/MvcMovie/Views/Person/Create.cshtml
+++ b/MvcMovie/Views/Person/Create.cshtml
@@ -7,7 +7,16 @@
 <h1>Create</h1>
 
 <h4>Person</h4>
-<hr />
+<hr /> 
+<form asp-action="Upload" enctype="mutipart/from-data">
+<div class="row from-control">
+<label class="col-sm-2">Inport data from Excel: </label>
+<input type="file" name="file" class="col-sm-4">
+<input type="submit" value="Upload"
+</div>
+</form>
+
+
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
