--- a/MvcMovie/Views/_ViewImports.cshtml
+++ b/MvcMovie/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using MvcMovie
-@using MvcMovie.Models
+﻿@using mvcmovie
+@using mvcmovie.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
